[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cage-visualisation-space"
maintainers = [
  { name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" },
]
dependencies = [
  "chemiscope>0.7.3",
]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
dev = [
  "moldoc",
  "pip-tools",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-rtd-theme",
  "twine",
  "furo",
]

[project.urls]
github = "https://github.com/TarziaResearchGroup/cage-visualisation-space"
documentation = "https://cage-visualisation-space.readthedocs.io"
